5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1635_2703.log
== TEST (2019-04-08 15:42:50) 
-- CODE:
num = int(input("idade:"))

if (num => 18):
	mensagem = "eleitor"
else:
	mensagem = "nao eleitor"

-- ERROR:
File "XXXX", line 3
    if (num => 18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:44:17) 
-- CODE:
num = int(input("idade:"))

if (num => 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if (num => 18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:44:54) 
-- CODE:
num = int(input("idade:"))

if (num >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:04) 
-- CODE:
num = int(input("idade:"))

if (num >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.187979
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
